# Michelin_Rated_Restaurants

./: .gitignore  AGENTS.md  INSEE.md  LICENSE  README.md  ROADMAP.md  WINE_ROADMAP.md  demographics_data.ipynb  pyproject.toml  requirements.txt
.github/workflows/: annual-pipeline.yml
App/: Procfile  michelin_app.py  requirements.txt
ExtraData/: France_Departments_Demographics.ipynb
ExtraData/Demographics/: demographics.csv  demographics_2022.csv  demographics_2023.csv
ExtraData/Geodata/: monaco.geojson  paris_arrondissements.geojson
Functions/: dash_app.py  functions_analysis.py  functions_visualisation.py  functions_wine.py  plotly_visual.py
Functions/Old_No_Upload/: functions_visualisation.py
Notebooks/: Data-Preparation.ipynb  France.ipynb  London Postcodes.ipynb  United_Kingdom.ipynb
Notebooks/France/: France.ipynb  France_Analysis.ipynb  France_Arrondissements.ipynb  France_Departments_Regions.ipynb  France_Interactive.ipynb  France_Processing.ipynb  France_Regions.ipynb  France_Visualisations.ipynb  functions.py  functions_analysis.py  functions_visualisation.py  (+1 more)
Years/: README.md
data/: france_data.csv
docs/: guide-changes.md  insee_data.md  stage1.md  stage2-france-departments.md  stage3-arrondissements.md  wine_data.md
notebooks/: Data-Preparation.ipynb  France_Arrondissements.ipynb  France_Changes.ipynb  France_Processing.ipynb  Monaco_Processing.ipynb  README.md
scripts/: run_annual_pipeline.sh
tests/: support.py  test_annual_pipeline_script.py  test_annual_pipeline_workflow.py  test_changes.py  test_insee_pipeline.py  test_stage1.py  test_stage1_fidelity.py  test_stage2.py  test_stage2_fidelity.py  test_stage2_monaco.py  test_stage3.py  test_wine_candidate_assembly.py  test_wine_cli_resolution.py  test_wine_pipeline.py  test_wine_product.py  test_wine_simplification.py  test_wine_simplification_batch.py
(+174 files in other folders)
